# conan-imgui-avi-player

./: CMakeLists.txt  README.md  conanfile.py  run_conan-matlab-imgui-avi-and-webcam-player_debug.bat  run_conan-matlab-imgui-avi-and-webcam-player_release.bat  video-player_debug.bat  video-player_release.bat
Test/: TestImGuiAvi.m  TestPlayImGuiAvi.cpp  TestVideoGui.cpp  TestVideoGui.m
include/: Decoder.h  ImGuiPlayer.h  Video.h  WebCam.h  playAvi.h
source/: Decoder.cpp  ImGuiPlayer.cpp  Video.cpp  WebCam.cpp  imguiAviMex.cpp  videoMex.cpp
